第一阶段第一模块任务三

--- a/_posts/07.lagou/01.第一阶段-开源框架源码解析/01.模块一 持久层框架设计及MyBatis源码分析/03.任务三：MyBatis源码剖析/2021-05-25-lagou-java-01-01-03.md
+++ b/_posts/07.lagou/01.第一阶段-开源框架源码解析/01.模块一 持久层框架设计及MyBatis源码分析/03.任务三：MyBatis源码剖析/2021-05-25-lagou-java-01-01-03.md
@@ -1,70 +1,1072 @@
 ---
 layout: post
-title:  "一些Java的面试题"
-date:   2019-01-01
-categories: InterView
-tags: InterView
+title:  "MyBatis源码剖析"
+date:   2021-05-25
+categories: lagou
+tags: lagou
 ---
 
 * content
 {:toc}
 
-1. 每天零碎的时间看几道面试题并且将看完的题目记录下来,考核自己
-2. 题目来源和答案:[知乎](https://zhuanlan.zhihu.com/p/64147696)
+
+1. 第一阶段、开源框架源码解析
+2. 模块一、持久层框架设计及MyBatis源码分析
+3. 任务三、MyBatis源码剖析
 
 
 
 
 
+# 任务3、MyBatis源码剖析
+## 第九部分：Mybatis架构原理
+### 9.1 架构设计
+![架构设计](/assets/lagou/第一阶段/第一模块/架构设计.jpg)
+
+我们把Mybatis的功能架构分为三层：
+
+**1.API接口层：**提供给外部使用的接口API，开发人员通过这些本地API来操纵数据库。接口层一接收到调用请求就会调用数据处理层来完成具体的数据处理。
+
+>MyBatis和数据库的交互有两种方式：
+>a.使用传统的MyBatis提供的API
+>b.使用Mapper代理的方式
+
+**2.数据处理层：**负责具体的SQL查找、SQL解析、SQL执行和执行结果映射处理等。它主要的目的是根据调用的请求完成一次数据库操作。  
+**3.基础支撑层：**负责最基础的功能支撑，包括连接管理、事务管理、配置加载和缓存处理，这些都是共用的东西，将他们抽取出来作为最基础的组件。为上层的数据处理层提供最基础的支撑
 
 
+### 9.2 主要构件及其相互关系
+
+构件|描述
+--|--
+SqlSession|作为MyBatis工作的主要顶层API，表示和数据库交互的会话，完成必要数据库增删改查功能
+Executor|MyBatis执行器，是MyBatis调度的核心，负责SQL语句的生成和查询缓存的维护
+StatementHandler|封装了JDBC Statement操作，负责对JDBC statement的操作，如设置参数、将Statement结果集转换成List集合。
+ParameterHandler|负责对用户传递的参数转换成JDBC Statement所需要的参数，
+ResultSetHandler|负责将JDBC返回的ResultSet结果集对象转换成List类型的集合
+TypeHandler|负责java数据类型和jdbc数据类型之间的映射和转换
+MappedStatement|MappedStatement维护了一条`＜select|update|delete|insert＞`节点的封装
+SqlSource|负责根据用户传递的parameterObject，动态地生成SQL语句，将信息封装到BoundSql对象中，并返回
+BoundSql|表示动态生成的SQL语句以及相应的参数信息
+
+![mybatis层次结构](/assets/lagou/第一阶段/第一模块/mybatis层次结构.jpg)
+
+### 9.3 总体流程
+
+**1.加载配置并初始化**  
+触发条件：加载配置文件  
+配置来源于两个地方，一个是配置文件(主配置文件conf.xml,mapper文件`*.xml`),—个是java代码中的注解，将主配置文件内容解析封装到Configuration,将sql的配置信息加载成为一个mappedstatement对象，存储在内存之中
+
+**2.接收调用请求**
+触发条件：调用Mybatis提供的API  
+传入参数：为SQL的ID和传入参数对象   
+处理过程：将请求传递给下层的请求处理层进行处理。  
+
+**3.处理操作请求**
+触发条件：API接口层传递请求过来  
+传入参数：为SQL的ID和传入参数对象
+处理过程：  
+>1.根据SQL的ID查找对应的MappedStatement对象。
+>2.根据传入参数对象解析MappedStatement对象，得到最终要执行的SQL和执行传入参数。
+>3.获取数据库连接，根据得到的最终SQL语句和执行传入参数到数据库执行，并得到执行结果。
+>4.根据MappedStatement对象中的结果映射配置对得到的执行结果进行转换处理，并得到最终的处理
+结果。
+>5.释放连接资源。
+
+**4.返回处理结果**  
+将最终的处理结果返回。
+
+## 第十部分：Mybatis源码剖析
+### 10.1 传统方式源码剖析
+
+**源码剖析-初始化**  
+```java
+Inputstream inputstream = Resources.getResourceAsStream("mybatisconfig.xml");
+//这一行代码正是初始化工作的开始。
+SqlSessionFactory factory = new
+SqlSessionFactoryBuilder().build(inputStream);
+```
+进入源码分析：
+```java
+// 1.我们最初调用的build
+public SqlSessionFactory build (InputStream inputStream){
+    //调用了重载方法
+    return build(inputStream, null, null);
+} 
+// 2.调用的重载方法
+public SqlSessionFactory build (InputStream inputStream, String environment,Properties properties){
+    try {
+        // XMLConfigBuilder是专门解析mybatis的配置文件的类
+        XMLConfigBuilder parser = new XMLConfigBuilder(inputstream,environment, properties);
+        //这里又调用了一个重载方法。parser.parse()的返回值是Configuration对象
+        return build(parser.parse());
+    } catch (Exception e) {
+        throw ExceptionFactory.wrapException("Error building SqlSession.", e)
+    }
+}
+```
+
+MyBatis在初始化的时候，会将MyBatis的配置信息全部加载到内存中，使用
+org.apache.ibatis.session.Configuration 实例来维护
+
+**下面进入对配置文件解析部分：**  
+首先对Configuration对象进行介绍：    
+>Configuration对象的结构和xml配置文件的对象几乎相同。  
+>回顾一下xml中的配置标签有哪些：  
+>properties (属性)，settings (设置)，typeAliases (类型别名)，typeHandlers (类型处理器)，objectFactory (对象工厂)，mappers (映射器)等   
+>Configuration也有对应的对象属性来封装它们,也就是说，初始化配置文件信息的本质就是创建Configuration对象，将解析的xml数据封装到Configuration内部属性中
+
+```java
+/**
+ * 解析 XML 成 Configuration 对象。
+ */
+public Configuration parse () {
+    //若已解析，抛出BuilderException异常
+    if (parsed) {
+        throw new BuilderException("Each XMLConfigBuilder can only beused once.");
+    } 
+    //标记已解析
+    parsed = true;
+    // 解析 XML configuration 节点
+    parseConfiguration(parser.evalNode("/configuration"));
+    return configuration;
+}
+/**
+  *解析XML
+  */
+private void parseConfiguration (XNode root){
+    try {
+        //issue #117 read properties first
+        // 解析 <properties /> 标签
+        propertiesElement(root.evalNode("properties"));
+        // 解析〈settings /> 标签
+        Properties settings = settingsAsProperties(root.evalNode("settings"));
+        //加载自定义的VFS实现类
+        loadCustomVfs(settings);
+        // 解析 <typeAliases /> 标签
+        typeAliasesElement(root.evalNode("typeAliases"));
+        //解析<plugins />标签
+        pluginElement(root.evalNode("plugins"));
+        // 解析 <objectFactory /> 标签
+        objectFactoryElement(root.evalNode("objectFactory"));
+        // 解析 <objectWrapperFactory /> 标签
+        objectWrapperFactoryElement(root.evalNode("objectWrapperFactory"));
+        // 解析 <reflectorFactory /> 标签
+        reflectorFactoryElement(root.evalNode("reflectorFactory"));
+        // 赋值 <settings /> 至 Configuration 属性
+        settingsElement(settings);
+        // read it after objectFactory and objectWrapperFactory issue#631
+        // 解析〈environments /> 标签
+        environmentsElement(root.evalNode("environments"));
+        // 解析 <databaseIdProvider /> 标签
+        databaseldProviderElement(root.evalNode("databaseldProvider"));
+        // 解析 <typeHandlers /> 标签
+        typeHandlerElement(root.evalNode("typeHandlers"));
+        //解析<mappers />标签
+        mapperElement(root.evalNode("mappers"));
+    } catch (Exception e) {
+        throw new BuilderException("Error parsing SQL Mapper Configuration.Cause:" + e, e);
+    }
+}
+```
+
+**介绍一下 MappedStatement：**  
+>作用：MappedStatement与Mapper配置文件中的一个select/update/insert/delete节点相对应。  
+>mapper中配置的标签都被封装到了此对象中，主要用途是描述一条SQL语句。
+
+**初始化过程：**回顾刚开始介绍的加载配置文件的过程中，会对mybatis-config.xml中的各个标签都进行解析，其中有mappers标签用来引入mapper.xml文件或者配置mapper接口的目录。  
+```xml
+<select id="getUser" resultType="user" >
+    select * from user where id=#{id}
+</select>
+```
+
+这样的一个select标签会在初始化配置文件时被解析封装成一个MappedStatement对象，然后存储在Configuration对象的mappedStatements属性中，mappedStatements 是一个HashMap，存储时key=全限定类名+方法名，value =对应的MappedStatement对象。
+
+在configuration中对应的属性为
+```java
+Map<String, MappedStatement> mappedStatements = new StrictMap<MappedStatement>
+("Mapped Statements collection")
+```
+
+在 XMLConfigBuilder 中的处理：  
+```java
+private void parseConfiguration(XNode root) {
+    try {
+        //省略其他标签的处理
+        mapperElement(root.evalNode("mappers"));
+    } catch (Exception e) {
+        throw new BuilderException("Error parsing SQL Mapper Configuration.Cause:" + e, e);
+    }
+}
+```
+
+到此对xml配置文件的解析就结束了，回到步骤2.中调用的重载build方法
+
+```java
+// 5.调用的重载方法
+public SqlSessionFactory build(Configuration config) {
+    //创建了 DefaultSqlSessionFactory 对象，传入 Configuration 对象。
+    return new DefaultSqlSessionFactory(config);
+}
+```
+
+**源码剖析-执行SQL流程**  
+先简单介绍SqlSession ：
+>1.SqlSession是一个接口，它有两个实现类：DefaultSqlSession (默认)和SqlSessionManager (弃用，不做介绍)  
+>2.SqlSession是MyBatis中用于和数据库交互的顶层类，通常将它与ThreadLocal绑定，一个会话使用一个SqlSession,并且在使用完毕后需要close
+
+```java
+public class DefaultSqlSession implements SqlSession {
+    private final Configuration configuration;
+    private final Executor executor;
+}
+```
+
+SqlSession中的两个最重要的参数，configuration与初始化时的相同，Executor为执行器
+
+**Executor：**
+>Executor也是一个接口，他有三个常用的实现类：  
+>BatchExecutor (重用语句并执行批量更新)  
+>ReuseExecutor (重用预处理语句 prepared statements)  
+>SimpleExecutor (普通的执行器，默认)  
+
+继续分析，初始化完毕后，我们就要执行SQL了
+```java
+SqlSession sqlSession = factory.openSession();
+List<User> list = sqlSession.selectList("com.lagou.mapper.UserMapper.getUserByName");
+```
+
+获得 sqlSession  
+```java
+//6. 进入 openSession 方法。
+public SqlSession openSession() {
+    //getDefaultExecutorType()传递的是SimpleExecutor
+    return openSessionFromDataSource(configuration.getDefaultExecutorType(),null, false);
+} 
+//7. 进入penSessionFromDataSource。
+//ExecutorType为Executor的类型，TransactionIsolationLevel为事务隔离级别，autoCommit是否开启事务
+//openSession的多个重载方法可以指定获得的SeqSession的Executor类型和事务的处理
+private SqlSession openSessionFromDataSource(ExecutorType execType,
+    ThreadransactionIsolationLevel level, boolean autoCommit) {
+    Transaction tx = null;
+    try{
+        final Environment environment = configuration.getEnvironment();
+        final TransactionFactory transactionFactory =
+        getTransactionFactoryFromEnvironment(environment);
+        tx = transactionFactory.newTransaction(environment.getDataSource(),
+        level, autoCommit);
+        //根据参数创建指定类型的Executor
+        final Executor executor = configuration.newExecutor(tx, execType);
+        //返回的是 DefaultSqlSession
+        return new DefaultSqlSession(configuration, executor, autoCommit);
+    } catch(Exception e){
+        closeTransaction(tx); 
+        // may have fetched a connection so lets call
+        close()
+    }
+}
+```
+
+执行 sqlsession 中的 api  
+```java
+//8.进入selectList方法，多个重载方法。
+public <E > List < E > selectList(String statement) {
+    return this.selectList(statement, null);
+public <E > List < E > selectList(String statement, Object parameter) {
+    return this.selectList(statement, parameter, RowBounds.DEFAULT);
+public <E > List < E > selectList(String statement, Object parameter, RowBounds rowBounds) {
+    try {
+        //根据传入的全限定名+方法名从映射的Map中取出MappedStatement对象
+        MappedStatement ms =
+        configuration.getMappedStatement(statement);
+        //调用Executor中的方法处理
+        //RowBounds是用来逻辑分页
+        // wrapCollection(parameter)是用来装饰集合或者数组参数
+        return executor.query(ms, wrapCollection(parameter),rowBounds, Executor.NO_RESULT_HANDLER);
+    } catch (Exception e) {
+        throw ExceptionFactory.wrapException("Error querying database Cause:" + e, e);
+    } finally {
+        ErrorContext.instance().reset();
+    }
+}
+```
+
+**源码剖析-executor**  
+继续源码中的步骤，进入executor.query()  
+```java
+//此方法在SimpleExecutor的父类BaseExecutor中实现
+public <E> List<E> query(MappedStatement ms, Object parameter, RowBounds rowBounds, ResultHandler resultHandler) throws SQLException {
+    //根据传入的参数动态获得SQL语句，最后返回用BoundSql对象表示
+    BoundSql boundSql = ms.getBoundSql(parameter);
+    //为本次查询创建缓存的Key
+    CacheKey key = createCacheKey(ms, parameter, rowBounds, boundSql);
+    return query(ms, parameter, rowBounds, resultHandler, key, boundSql);
+} 
+//进入query的重载方法中
+public <E> List<E> query(MappedStatement ms, Object parameter, RowBounds rowBounds, ResultHandler resultHandler, CacheKey key, BoundSql boundSql) throws SQLException {
+    ErrorContext.instance().resource(ms.getResource()).activity("executing a query").object(ms.getId());
+    if (closed) {
+        throw new ExecutorException("Executor was closed.");
+    } 
+    if (queryStack == 0 && ms.isFlushCacheRequired()) {
+        clearLocalCache();
+    } 
+    List<E> list;
+    try {
+        queryStack++;
+        list = resultHandler == null ? (List<E>) localCache.getObject(key) :null;
+        if (list != null) {
+            handleLocallyCachedOutputParameters(ms, key, parameter,boundSql);
+        } else {
+            //如果缓存中没有本次查找的值，那么从数据库中查询
+            list = queryFromDatabase(ms, parameter, rowBounds,resultHandler, key, boundSql);
+        }
+    } finally {
+        queryStack--;
+    } 
+    if (queryStack == 0) {
+        for (DeferredLoad deferredLoad : deferredLoads) {
+            deferredLoad.load();
+        } 
+        // issue #601
+        deferredLoads.clear();
+        if (configuration.getLocalCacheScope() == LocalCacheScope.STATEMENT){ 
+            // issue #482 clearLocalCache();
+        }
+    } 
+    return list;
+} 
+//从数据库查询
+private <E> List<E> queryFromDatabase(MappedStatement ms, Object parameter,RowBounds rowBounds, ResultHandler resultHandler, CacheKey key, BoundSql boundSql) throws SQLException {
+    List<E> list;
+    localCache.putObject(key, EXECUTION_PLACEHOLDER);
+    try {
+        //查询的方法
+        list = doQuery(ms, parameter, rowBounds, resultHandler, boundSql);
+    } finally {
+        localCache.removeObject(key);
+    } 
+    //将查询结果放入缓存
+    localCache.putObject(key, list);
+    if (ms.getStatementType() == StatementType.CALLABLE) {
+        localOutputParameterCache.putObject(key, parameter);
+    } 
+    return list;
+} 
+// SimpleExecutor中实现父类的doQuery抽象方法
+public <E> List<E> doQuery(MappedStatement ms, Object parameter, RowBounds rowBounds, ResultHandler resultHandler, BoundSql boundSql) throws SQLException {
+    Statement stmt = null;
+    try {
+        Configuration configuration = ms.getConfiguration();
+        //传入参数创建StatementHanlder对象来执行查询
+        StatementHandler handler = configuration.newStatementHandler(wrapper, ms, parameter, rowBounds,resultHandler, boundSql);
+        //创建jdbc中的statement对象
+        stmt = prepareStatement(handler, ms.getStatementLog());
+        // StatementHandler 进行处理
+        return handler.query(stmt, resultHandler);
+    } finally {
+        closeStatement(stmt);
+    }
+} 
+//创建Statement的方法
+private Statement prepareStatement(StatementHandler handler, Log statementLog) throws SQLException {
+    Statement stmt;
+    //条代码中的getConnection方法经过重重调用最后会调用openConnection方法，从连接池中获 得连接。
+    Connection connection = getConnection(statementLog);
+    stmt = handler.prepare(connection, transaction.getTimeout());
+    handler.parameterize(stmt);
+    return stmt;
+} 
+//从连接池获得连接的方法
+protected void openConnection() throws SQLException {
+    if (log.isDebugEnabled()) {
+        log.debug("Opening JDBC Connection");
+    } 
+    //从连接池获得连接
+    connection = dataSource.getConnection();
+    if (level != null) {
+        connection.setTransactionIsolation(level.getLevel());
+    }
+}
+```
+
+上述的Executor.query()方法几经转折，最后会创建一个StatementHandler对象，然后将必要的参数传递给StatementHandler，使用StatementHandler来完成对数据库的查询，最终返回List结果集。从上面的代码中我们可以看出，Executor的功能和作用是：  
+>1、根据传递的参数，完成SQL语句的动态解析，生成BoundSql对象，供StatementHandler使用；
+>2、为查询创建缓存，以提高性能
+>3、创建JDBC的Statement连接对象，传递给*StatementHandler*对象，返回List查询结果。
+
+**源码剖析-StatementHandler**  
+StatementHandler对象主要完成两个工作：  
+>1.对于JDBC的PreparedStatement类型的对象，创建的过程中，我们使用的是SQL语句字符串会包含若干个？占位符，我们其后再对占位符进行设值。StatementHandler通过parameterize(statement)方法对 Statement 进行设值；  
+>2.StatementHandler 通过 List query(Statement statement, ResultHandler resultHandler)方法来完成执行Statement，和将Statement对象返回的resultSet封装成List；
 
 
+进入到 StatementHandler 的 parameterize(statement)方法的实现：
+```java
+public void parameterize(Statement statement) throws SQLException {
+    //使用ParameterHandler对象来完成对Statement的设值
+    parameterHandler.setParameters((PreparedStatement) statement);
+}
+```
 
-# 面试题
-## Java基础
-1. **JDK 和 JRE 有什么区别？**
-2. **== 和 equals 的区别是什么？**
-3. **两个对象的 hashCode()相同，则 equals()也一定为 true，对吗？**
-4. **final 在 java 中有什么作用？**
-5. **java 中的 Math.round(-1.5) 等于多少？**
-6. **String 属于基础的数据类型吗？**
-7. **java 中操作字符串都有哪些类？它们之间有什么区别？**
-8. **String str="i"与 String str=new String("i")一样吗？**
-9. **如何将字符串反转？**
-10. **String 类的常用方法都有那些？**
-11. **抽象类必须要有抽象方法吗？**
-12. **普通类和抽象类有哪些区别？**
-13. **抽象类能使用 final 修饰吗？**
-14. **接口和抽象类有什么区别？**
-15. **java 中 IO 流分为几种？**
-16. **BIO、NIO、AIO 有什么区别？**
-17. **Files的常用方法都有哪些？**
+```java
+/** 
+ * ParameterHandler 类的 setParameters(PreparedStatement ps)实现
+ * 对某一个Statement进行设置参数
+ * 
+ */
+public void setParameters(PreparedStatement ps) {
+    ErrorContext.instance().activity("setting parameters").object(mappedStatement.getParameterMap().getId());
+    List<ParameterMapping> parameterMappings = boundSql.getParameterMappings();
+    if (parameterMappings != null) {
+        for (int i = 0; i < parameterMappings.size(); i++) {
+            ParameterMapping parameterMapping = parameterMappings.get(i);
+            if (parameterMapping.getMode() != ParameterMode.OUT) {
+                Object value;
+                String propertyName = parameterMapping.getProperty();
+                if (boundSql.hasAdditionalParameter(propertyName)) { // issue #448 ask first for additional params
+                    value = boundSql.getAdditionalParameter(propertyName);
+                } else if (parameterObject == null) {
+                    value = null;
+                } else if (typeHandlerRegistry.hasTypeHandler(parameterObject.getClass())) {
+                    value = parameterObject;
+                } else {
+                    MetaObject metaObject = configuration.newMetaObject(parameterObject);
+                    value = metaObject.getValue(propertyName);
+                }
+                TypeHandler typeHandler = parameterMapping.getTypeHandler();
+                JdbcType jdbcType = parameterMapping.getJdbcType();
+                if (value == null && jdbcType == null) {
+                    jdbcType = configuration.getJdbcTypeForNull();
+                }
+                try {
+                    typeHandler.setParameter(ps, i + 1, value, jdbcType);
+                } catch (TypeException e) {
+                    throw new TypeException("Could not set parameters for mapping: " + parameterMapping + ". Cause: " + e, e);
+                } catch (SQLException e) {
+                    throw new TypeException("Could not set parameters for mapping: " + parameterMapping + ". Cause: " + e, e);
+                }
+            }
+        }
+    }
+}
+```
 
-## 容器
+从上述的代码可以看到,StatementHandler的parameterize(Statement)方法调用了ParameterHandler的setParameters(statement)方法，ParameterHandler的setParameters(Statement )方法负责根据我们输入的参数，对statement对象的?占位符处进行赋值。
 
+进入到StatementHandler 的 List query(Statement statement, ResultHandler resultHandler)方法的实现：
+```java
+public <E> List<E> query(Statement statement, ResultHandler resultHandler) throws SQLException {
+    // 1.调用preparedStatemnt。execute()方法，然后将resultSet交给ResultSetHandler处理
+    PreparedStatement ps = (PreparedStatement) statement;
+    ps.execute();
+    //2.使用 ResultHandler 来处理 ResultSet
+    return resultSetHandler.<E> handleResultSets(ps);
+}
+```
 
+从上述代码我们可以看出，StatementHandler 的List query(Statement statement, ResultHandler resultHandler)方法的实现，是调用了 ResultSetHandler 的 handleResultSets(Statement)方法。
 
+ResultSetHandler 的 handleResultSets(Statement)方法会将 Statement 语句执行后生成的 resultSet结果集转换成List结果集
+```java
+public List<Object> handleResultSets(Statement stmt) throws SQLException {
+    ErrorContext.instance().activity("handling results").object(mappedStatement.getId());
+    //多ResultSet的结果集合，每个ResultSet对应一个Object对象。而实际上，每 个 Object 是List<Object> 对象。
+    //在不考虑存储过程的多ResultSet的情况，普通的查询，实际就一个ResultSet，也就是说，multipleResults最多就一个元素。
+    final List<Object> multipleResults = new ArrayList<>();
+    int resultSetCount = 0;
+    //获得首个ResultSet对象，并封装成ResultSetWrapper对象
+    ResultSetWrapper rsw = getFirstResultSet(stmt);
+    //获得ResultMap数组
+    //在不考虑存储过程的多ResultSet的情况，普通的查询，实际就一个ResultSet，也 就是说，resultMaps就一个元素。
+    List<ResultMap> resultMaps = mappedStatement.getResultMaps();
+    int resultMapCount = resultMaps.size();
+    validateResultMapsCount(rsw, resultMapCount); // 校验
+    while (rsw != null && resultMapCount > resultSetCount) {
+        //获得ResultMap对象
+        ResultMap resultMap = resultMaps.get(resultSetCount);
+        //处理ResultSet，将结果添加到multipleResults中
+        handleResultSet(rsw, resultMap, multipleResults, null);
+        //获得下一个ResultSet对象，并封装成ResultSetWrapper对象
+        rsw = getNextResultSet(stmt);
+        //清理
+        cleanUpAfterHandlingResultSet();
+        // resultSetCount ++
+        resultSetCount++;
+    } 
+    //因为'mappedStatement.resultSets'只在存储过程中使用，本系列暂时不考虑，忽略即可
+    String[] resultSets = mappedStatement.getResultSets();
+    if(resultSets!=null) {
+        while (rsw != null && resultSetCount < resultSets.length) {
+            ResultMapping parentMapping =nextResultMaps.get(resultSets[resultSetCount]);
+            if (parentMapping != null) {
+                String nestedResultMapId = parentMapping.getNestedResultMapId();
+                ResultMap resultMap = configuration.getResultMap(nestedResultMapId);
+            handleResultSet(rsw, resultMap, null, parentMapping);
+            }
+            rsw = getNextResultSet(stmt);
+            cleanUpAfterHandlingResultSet();
+            resultSetCount++;
+        }
+    } 
+    //如果是multipleResults单元素，则取首元素返回
+    return collapseSingleResultList(multipleResults);
+}
+```
 
+### 10.2 Mapper代理方式
+回顾下写法:
+```java
+public static void main(String[] args) {
+    //前三步都相同
+    InputStream inputStream = Resources.getResourceAsStream("sqlMapConfig.xml");
+    SqlSessionFactory factory = new SqlSessionFactoryBuilder().build(inputStream);
+    SqlSession sqlSession = factory.openSession();
+    //这里不再调用SqlSession的api,而是获得了接口对象，调用接口中的方法。
+    UserMapper mapper = sqlSession.getMapper(UserMapper.class);
+    List<User> list = mapper.getUserByName("tom");
+}
+```
 
+思考一个问题，通常的Mapper接口我们都没有实现的方法却可以使用，是为什么呢？答案很简单动态代理  
+>1.开始之前介绍一下MyBatis初始化时对接口的处理：MapperRegistry是Configuration中的一个属性    
+>2.它内部维护一个HashMap用于存放mapper接口的工厂类，每个接口对应一个工厂类。mappers中可以配置接口的包路径，或者某个具体的接口类。
 
+```xml
+<mappers>
+    <mapper class="com.lagou.mapper.UserMapper"/>
+    <package name="com.lagou.mapper"/>
+</mappers>
+```
 
+当解析mappers标签时，它会判断解析到的是mapper配置文件时，会再将对应配置文件中的增删改查标签封装成MappedStatement对象，存入mappedStatements中。(上文介绍了)当判断解析到接口时，会建此接口对应的MapperProxyFactory对象，存入HashMap中，key =接口的字节码对象，value =此接口对应的MapperProxyFactory对象。
 
+**源码剖析-getmapper()**  
+进入 sqlSession.getMapper(UserMapper.class )中
+```java
+//DefaultSqlSession 中的 getMapper
+public <T> T getMapper(Class<T> type) {
+    return configuration.<T>getMapper(type, this);
+} 
+//configuration 中的给 getMapper
+public <T> T getMapper(Class<T> type, SqlSession sqlSession) {
+    return mapperRegistry.getMapper(type, sqlSession);
+} 
+//MapperRegistry 中的 getMapper
+public <T> T getMapper(Class<T> type, SqlSession sqlSession) {
+    //从 MapperRegistry 中的 HashMap 中拿 MapperProxyFactory
+    final MapperProxyFactory<T> mapperProxyFactory = (MapperProxyFactory<T>)knownMappers.get(type);
+    if (mapperProxyFactory == null) {
+        throw new BindingException("Type " + type + " is not known to the MapperRegistry.");
+    } 
+    try {
+        //通过动态代理工厂生成示例。
+        return mapperProxyFactory.newInstance(sqlSession);
+    } catch (Exception e) {
+        throw new BindingException("Error getting mapper instance. Cause: "+ e, e);
+    }
+} 
+//MapperProxyFactory 类中的 newInstance 方法
+public T newInstance(SqlSession sqlSession) {
+    //创建了 JDK动态代理的Handler类
+    final MapperProxy<T> mapperProxy = new MapperProxy<>(sqlSession,mapperInterface, methodCache);
+    //调用了重载方法
+    return newInstance(mapperProxy);
+} 
+//MapperProxy 类，实现了 InvocationHandler 接口
+public class MapperProxy<T> implements InvocationHandler, Serializable {
+    //省略部分源码
+    private final SqlSession sqlSession;
+    private final Class<T> mapperInterface;
+    private final Map<Method, MapperMethod> methodCache;
+    //构造，传入了 SqlSession，说明每个session中的代理对象的不同的！
+    public MapperProxy(SqlSession sqlSession, Class<T> mapperInterface,Map<Method, MapperMethod> methodCache) {
+        this.sqlSession = sqlSession;
+        this.mapperInterface = mapperInterface;
+        this.methodCache = methodCache;
+    } 
+        //省略部分源码
+}
+```
 
+**源码剖析-invoke()**  
+在动态代理返回了示例后，我们就可以直接调用mapper类中的方法了，但代理对象调用方法，执行是在MapperProxy中的invoke方法中
 
+```java
+public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
+    try {
+        if (Object.class.equals(method.getDeclaringClass())) {
+            return method.invoke(this, args);
+        } else if (isDefaultMethod(method)) {
+            return invokeDefaultMethod(proxy, method, args);
+        }
+    } catch (Throwable t) {
+        throw ExceptionUtil.unwrapThrowable(t);
+    }
+    final MapperMethod mapperMethod = cachedMapperMethod(method);
+    return mapperMethod.execute(sqlSession, args);
+}
+```
 
+进入execute方法：
+```java
+public Object execute(SqlSession sqlSession, Object[] args) {Object result;
+    //判断mapper中的方法类型，最终调用的还是SqlSession中的方法 
+    switch(command.getType()) {
+        case INSERT: {
+            //转换参数
+            Object param = method.convertArgsToSqlCommandParam(args);
+            //执行INSERT操作
+            // 转换 rowCount
+            result = rowCountResult(sqlSession.insert(command.getName(),param));
+            break;
+        }
+        case UPDATE: {
+            //转换参数
+            Object param = method.convertArgsToSqlCommandParam(args);
+            // 转换 rowCount
+            result = rowCountResult(sqlSession.update(command.getName(),
+            param));
+            break;
+        } 
+        case DELETE: {
+            //转换参数
+            Object param = method.convertArgsToSqlCommandParam(args);
+            // 转换 rowCount
+            result = rowCountResult(sqlSession.delete(command.getName(),
+            param));
+            break;
+        } 
+        case SELECT:
+            //无返回，并且有ResultHandler方法参数，则将查询的结果，提交给 ResultHandler 进行处理
+            if (method.returnsVoid() && method.hasResultHandler()) {
+                executeWithResultHandler(sqlSession, args);
+                result = null;
+            //执行查询，返回列表
+            } else if (method.returnsMany()) {
+                result = executeForMany(sqlSession, args);
+            //执行查询，返回Map
+            } else if (method.returnsMap()) {
+                result = executeForMap(sqlSession, args);
+            //执行查询，返回Cursor
+            } else if (method.returnsCursor()) {
+                result = executeForCursor(sqlSession, args);
+            //执行查询，返回单个对象
+            } else {
+                //转换参数
+                Object param = method.convertArgsToSqlCommandParam(args);
+                //查询单条
+                result = sqlSession.selectOne(command.getName(), param);
+                if (method.returnsOptional() &&(result == null ||!method.getReturnType().equals(result.getClass()))){
+                    result = Optional.ofNullable(result);
+                }
+            } 
+            break;
+        case FLUSH:
+            result = sqlSession.flushStatements();
+            break;
+            default:throw new BindingException("Unknown execution method for: " +command.getName());
+    }
+    //返回结果为null，并且返回类型为基本类型，则抛出BindingException异常
+    if(result ==null&&method.getReturnType().isPrimitive()&&!method.returnsVoid()){
+        throw new BindingException("Mapper method '" + command.getName() + "attempted to return null from a method with a primitive return type(" + method.getReturnType() + "). ");
+    }
+    //返回结果
+    return result;
+}
+```
 
+## 第十一部分：设计模式
 
+虽然我们都知道有3类23种设计模式，但是大多停留在概念层面，Mybatis源码中使用了大量的设计模式，观察设计模式在其中的应用，能够更深入的理解设计模式  
+Mybatis至少用到了以下的设计模式的使用：
 
+模式|mybatis 体现
+--|--
+Builder模式|例如SqlSessionFactoryBuilder、Environment;
+工厂方法模式|例如SqlSessionFactory、TransactionFactory、LogFactory
+单例模式|例如ErrorContext 和 LogFactory；
+代理模式|Mybatis实现的核心，比如MapperProxy、ConnectionLogger，用的jdk的动态代理还有executor.loader包使用了 cglib或者javassist达到延迟加载的效果
+组合模式|例如SqlNode和各个子类ChooseSqlNode等；
+模板方法模式|例如 BaseExecutor 和 SimpleExecutor，还有 BaseTypeHandler 和所有的子类例如IntegerTypeHandler；
+适配器模式|例如Log的Mybatis接口和它对jdbc、log4j等各种日志框架的适配实现；
+装饰者模式|例如Cache包中的cache.decorators子包中等各个装饰者的实现；
+迭代器模式|例如迭代器模式PropertyTokenizer；
 
+接下来对Builder构建者模式、工厂模式、代理模式进行解读，先介绍模式自身的知识，然后解读在Mybatis中怎样应用了该模式。
 
+### 11.1 Builder构建者模式
+Builder模式的定义是"将一个复杂对象的构建与它的表示分离，使得同样的构建过程可以创建不同的表示。"，它属于创建类模式，一般来说，如果一个对象的构建比较复杂，超出了构造函数所能包含的范围，就可以使用工厂模式和Builder模式，相对于工厂模式会产出一个完整的产品，Builder应用于更加复杂的对象的构建，甚至只会构建产品的一个部分，直白来说，就是使用多个简单的对象一步一步构建成一个复杂的对象
 
+**例子：使用构建者设计模式来生产computer**  
+主要步骤：
+>1、将需要构建的目标类分成多个部件（电脑可以分为主机、显示器、键盘、音箱等部件）；
+>2、创建构建类；
+>3、依次创建部件；
+>4、将部件组装成目标对象
 
+**1.定义computer**  
+```java
+package com.lagou.dao;
+import org.apache.ibatis.binding.BindingException;
+import org.apache.ibatis.session.SqlSession;
+import java.util.Optional;
+public class Computer {
+    private String displayer;
+    private String mainUnit;
+    private String mouse;
+    private String keyboard;
+    public String getDisplayer() {
+        return displayer;
+    } 
+    public void setDisplayer(String displayer) {
+        this.displayer = displayer;
+    } 
+    public String getMainUnit() {
+        return mainUnit;
+    } 
+    public void setMainUnit(String mainUnit) {
+        this.mainUnit = mainUnit;
+    } 
+    public String getMouse() {
+        return mouse;
+    } 
+    public void setMouse(String mouse) {
+        this.mouse = mouse;
+    } 
+    public String getKeyboard() {
+        return keyboard;
+    } 
+    public void setKeyboard(String keyboard) {
+        this.keyboard = keyboard;
+    } 
+    @Override
+    public String toString() {
+        return "Computer{" + "displayer='" + displayer + '\'' + ", mainUnit='" + mainUnit + '\'' + ", mouse='" + mouse + '\'' + ", keyboard='" + keyboard + '\''+ '}';
+    }
+}
+```
 
+ComputerBuilder
+```java
+public static class ComputerBuilder {
+    private ComputerBuilder target = new ComputerBuilder();
+    public Builder installDisplayer(String displayer) {
+        target.setDisplayer(displayer);
+        return this;
+    } 
+    public Builder installMainUnit(String mainUnit) {
+        target.setMainUnit(mainUnit);
+        return this;
+    } 
+    public Builder installMouse(String mouse) {
+        target.setMouse(mouse);
+        return this;
+    } 
+    public Builder installKeybord(String keyboard) {
+        target.setKeyboard(keyboard);
+        return this;
+    } 
+    public ComputerBuilder build() {
+        return target;
+    }
+}
+```
 
+调用
+```java
+public static void main(String[]args){
+    ComputerBuilder computerBuilder=new ComputerBuilder();
+    computerBuilder.installDisplayer("显万器");
+    computerBuilder.installMainUnit("主机");
+    computerBuilder.installKeybord("键盘");
+    computerBuilder.installMouse("鼠标");
+    Computer computer=computerBuilder.Builder();
+    System.out.println(computer);
+}
+```
 
+**Mybatis中的体现**  
+SqlSessionFactory 的构建过程：  
+Mybatis的初始化工作非常复杂，不是只用一个构造函数就能搞定的。所以使用了建造者模式，使用了大量的Builder，进行分层构造，核心对象Configuration使用了 XmlConfigBuilder来进行构造  
+![mybatis中的体现](/assets/lagou/第一阶段/第一模块/mybatis中的体现.jpg)
 
+在Mybatis环境的初始化过程中，SqlSessionFactoryBuilder会调用XMLConfigBuilder读取所有的MybatisMapConfig.xml 和所有的 `*Mapper.xml` 文件，构建 Mybatis 运行的核心对象 Configuration对象，然后将该Configuration对象作为参数构建一个SqlSessionFactory对象。
+```java
+private void parseConfiguration(XNode root) {
+try {
+//issue #117 read properties first
+//解析<properties />标签
+propertiesElement(root.evalNode("properties"));
+// 解析 <settings /> 标签
+Properties settings = settingsAsProperties(root.evalNode("settings"));
+//加载自定义的VFS实现类
+loadCustomVfs(settings);
+// 解析 <typeAliases /> 标签
+typeAliasesElement(root.evalNode("typeAliases"));
+//解析<plugins />标签
+pluginElement(root.evalNode("plugins"));
+// 解析 <objectFactory /> 标签
+objectFactoryElement(root.evaINode("obj ectFactory"));
+// 解析 <objectWrapper Factory /> 标签
+obj ectWrappe rFacto ryElement(root.evalNode("objectWrapperFactory"));
+// 解析 <reflectorFactory /> 标签
+reflectorFactoryElement(root.evalNode("reflectorFactory"));
+// 赋值 <settings /> 到 Configuration 属性
+settingsElement(settings);
+// read it after objectFactory and objectWrapperFactory issue #631
+// 解析 <environments /> 标签
+environmentsElement(root.evalNode("environments"));
+// 解析 <databaseIdProvider /> 标签
+databaseldProviderElement(root.evalNode("databaseldProvider"));
+}
+```
 
+其中 XMLConfigBuilder 在构建 Configuration 对象时，也会调用 XMLMapperBuilder 用于读取`*Mapper` 文件，而XMLMapperBuilder会使用XMLStatementBuilder来读取和build所有的SQL语句。
+```java
+//解析<mappers />标签
+mapperElement(root.evalNode("mappers"));
+```
+
+在这个过程中，有一个相似的特点，就是这些Builder会读取文件或者配置，然后做大量的XpathParser解析、配置或语法的解析、反射生成对象、存入结果缓存等步骤，这么多的工作都不是一个构造函数所能包括的，因此大量采用了 Builder模式来解决  
+![builder](/assets/lagou/第一阶段/第一模块/builder.jpg)  
+SqlSessionFactoryBuilder类根据不同的输入参数来构建SqlSessionFactory这个工厂对象
+
+### 11.2 工厂模式
+>1.在Mybatis中比如SqlSessionFactory使用的是工厂模式，该工厂没有那么复杂的逻辑，是一个简单工厂模式。   
+>2.简单工厂模式(Simple Factory Pattern)：又称为静态工厂方法(Static Factory Method)模式，它属于创建型模式。
+>3.在简单工厂模式中，可以根据参数的不同返回不同类的实例。简单工厂模式专门定义一个类来负责创建其他类的实例，被创建的实例通常都具有共同的父类
+
+**例子：生产电脑**    
+假设有一个电脑的代工生产商，它目前已经可以代工生产联想电脑了，随着业务的拓展，这个代工生产商还要生产惠普的电脑，我们就需要用一个单独的类来专门生产电脑，这就用到了简单工厂模式。
+
+下面我们来实现简单工厂模式
+
+**1.创建抽象产品类**  
+我们创建一个电脑的抽象产品类，他有一个抽象方法用于启动电脑
+```java
+public abstract class Computer {
+    /**
+     *产品的抽象方法，由具体的产品类去实现
+     */
+    public abstract void start();
+}
+```
+
+**2.创建具体产品类**  
+接着我们创建各个品牌的电脑，他们都继承了他们的父类Computer，并实现了父类的start方法  
+```java
+public class LenovoComputer extends Computer{
+    @Override
+    public void start() {
+        System.out.println("联想电脑启动");
+    }
+}
+```
+
+```java
+public class HpComputer extends Computer{
+    @Override
+    public void start() {
+        System.out.println("惠普电脑启动");
+    }
+}
+```
+
+**3.创建工厂类**  
+接下来创建一个工厂类，它提供了一个静态方法createComputer用来生产电脑。你只需要传入你想生产的电脑的品牌，它就会实例化相应品牌的电脑对象
+```java
+import org.junit.runner.Computer;
+public class ComputerFactory {
+    public static Computer createComputer(String type){
+        Computer mComputer=null;
+        switch (type) {
+            case "lenovo":
+                mComputer=new LenovoComputer();
+                break;
+            case "hp":
+                mComputer=new HpComputer();
+                break;
+        } 
+        return mComputer;
+    }
+}
+```
+
+客户端调用工厂类  
+客户端调用工厂类，传入“hp”生产出惠普电脑并调用该电脑对象的start方法：
+```java
+public class CreatComputer {
+    public static void main(String[]args){
+        ComputerFactory.createComputer("hp").start();
+    }
+}
+```
+
+**Mybatis 体现：**  
+Mybatis中执行Sql语句、获取Mappers、管理事务的核心接口SqlSession的创建过程使用到了工厂模式。  
+
+有一个 SqlSessionFactory 来负责 SqlSession 的创建
+
+![mybatis工厂模式](/assets/lagou/第一阶段/第一模块/mybatis工厂模式.jpg)
+
+SqlSessionFactory  
+>1.可以看到，该Factory的openSession ()方法重载了很多个，分别支持autoCommit、Executor、Transaction等参数的输入，来构建核心的SqlSession对象。  
+>2.在DefaultSqlSessionFactory的默认工厂实现里，有一个方法可以看出工厂怎么产出一个产品:
+
+```java
+private SqlSession openSessionFromDataSource(ExecutorType execType,TransactionIsolationLevel level,boolean autoCommit){
+    Transaction tx=null;
+    try{
+        final Environment environment=configuration.getEnvironment();
+        final TransactionFactory transactionFactory=getTransactionFactoryFromEnvironment(environment);
+        tx=transactionFactory.newTransaction(environment.getDataSource(),level,autoCommit);
+        //根据参数创建制定类型的Executor
+        final Executor executor=configuration.newExecutor(tx,execType);
+        //返回的是 DefaultSqlSession
+        return new DefaultSqlSession(configuration,executor,autoCommit);
+    }catch(Exception e){
+        closeTransaction(tx); // may have fetched a connection so lets call
+        close()
+        throw ExceptionFactory.wrapException("Error opening session. Cause: "+e,e);
+    }finally{
+        ErrorContext.instance().reset();
+    } 
+}
+```
+
+这是一个openSession调用的底层方法，该方法先从configuration读取对应的环境配置，然后初始化TransactionFactory 获得一个 Transaction 对象，然后通过 Transaction 获取一个 Executor对象，最后通过configuration、Executor、是否autoCommit三个参数构建了 SqlSession
+
+### 11.3 代理模式
+
+代理模式(Proxy Pattern):给某一个对象提供一个代理，并由代理对象控制对原对象的引用。代理模式的英文叫做Proxy，它是一种对象结构型模式，代理模式分为静态代理和动态代理，我们来介绍动态代理
+
+**举例：**
+
+1.创建一个抽象类，Person接口，使其拥有一个没有返回值的doSomething方法。
+```java
+/**
+ * 抽象类人
+ */
+public interface Person {
+    void doSomething();
+}
+```
+
+2.创建一个名为Bob的Person接口的实现类，使其实现doSomething方法
+```java
+/**
+ * 创建一个名为Bob的人的实现类
+ */
+public class Bob implements Person {
+    public void doSomething() {
+        System.out.println("Bob doing something!");
+    }
+}
+```
+
+3.创建JDK动态代理类，使其实现InvocationHandler接口。拥有一个名为target的变量，并创建getTarget获取代理对象方法
+```java
+/**
+ * JDK动态代理
+ * 需实现 InvocationHandler 接口 
+ */
+public class JDKDynamicProxy implements InvocationHandler {
+    //被代理的对象
+    Person target;
+    // JDKDynamicProxy 构造函数
+    public JDKDynamicProxy(Person person) { 
+        this.target = person;
+    } 
+    //获取代理对象
+    public Person getTarget() { 
+        return (Person)Proxy.newProxylnstance(target.getClass().getClassLoader(),target.getClass().getInterfaces(), this);
+    } 
+    //动态代理invoke方法
+    public Person invoke(Object proxy, Method method, Object[] args) throws Throwable {
+        //被代理方法前执行
+        System.out.println("JDKDynamicProxy do something before!");
+        //执行被代理的方法
+        Person result = (Person) method.invoke(target, args);
+        //被代理方法后执行
+        System.out.println("JDKDynamicProxy do something after!"); 
+        return result;
+    }
+}
+```
+
+4.创建JDK动态代理测试类J DKDynamicTest
+```java
+/**
+ * JDK动态代理测试
+ */
+public class JDKDynamicTest {
+    public static void main(String[] args) {
+        System.out.println("不使用代理类，调用doSomething方法。");
+        //不使用代理类
+        Person person = new Bob();
+        // 调用 doSomething 方法
+        person.doSomething();
+        System.out.println("分割线-----------");
+        System.out.println("使用代理类，调用doSomething方法。");
+        //获取代理类
+        Person proxyPerson = new JDKDynamicProxy(new Bob()).getTarget();
+        // 调用 doSomething 方法 proxyPerson.doSomething();
+    }
+}
+```
+
+**Mybatis中实现：**  
+代理模式可以认为是Mybatis的核心使用的模式，正是由于这个模式，我们只需要编写Mapper.java接口，不需要实现，由Mybatis后台帮我们完成具体SQL的执行    
+当我们使用Configuration的getMapper方法时，会调用mapperRegistry.getMapper方法，而该方法又会调用 mapperProxyFactory.newInstance(sqlSession)来生成一个具体的代理：
+
+```java
+public class MapperProxyFactory<T> {
+    private final Class<T> mapperInterface;
+    private final Map<Method, MapperMethod> methodCache = new ConcurrentHashMap<Method, MapperMethod>();
+    public MapperProxyFactory(Class<T> mapperInterface) {
+        this.mapperInterface = mapperInterface;
+    } 
+    public Class<T> getMapperInterface() {
+        return mapperInterface;
+    } 
+    public Map<Method, MapperMethod> getMethodCache() {
+        return methodCache;
+    }
+    @SuppressWarnings("unchecked")
+    protected T newInstance(MapperProxy<T> mapperProxy) {
+        return (T) Proxy.newProxyInstance(mapperInterface.getClassLoader(), new Class[] { mapperInterface }, mapperProxy);
+    } 
+    public T newInstance(SqlSession sqlSession) {
+        final MapperProxy<T> mapperProxy = new MapperProxy<T>(sqlSession, mapperInterface, methodCache);
+        return newInstance(mapperProxy);
+    }
+}
+```
+
+在这里，先通过T newInstance(SqlSession sqlSession)方法会得到一个MapperProxy对象，然后调用T newInstance(MapperProxy mapperProxy)生成代理对象然后返回。而查看MapperProxy的代码，可以看到如下内容：
+
+```java
+public class MapperProxy<T> implements InvocationHandler, Serializable {
+    @Override
+    public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
+        try {
+            if (Object.class.equals(method.getDeclaringClass())) {
+                return method.invoke(this, args);
+            } else if (isDefaultMethod(method)) {
+                return invokeDefaultMethod(proxy, method, args);
+            }
+        } catch (Throwable t) {
+            throw ExceptionUtil.unwrapThrowable(t);
+        } 
+        final MapperMethod mapperMethod = cachedMapperMethod(method);
+        return mapperMethod.execute(sqlSession, args);
+    }
+}
+```
+
+非常典型的，该MapperProxy类实现了InvocationHandler接口，并且实现了该接口的invoke方法。通过这种方式，我们只需要编写Mapper.java接口类，当真正执行一个Mapper接口的时候，就会转发给MapperProxy.invoke方法，而该方法则会调用后续的sqlSession.cud>executor.execute>prepareStatement 等一系列方法，完成 SQL 的执行和返回
 
 
 
