--- a/_posts/07.lagou/01.第一阶段-开源框架源码解析/01.模块一 持久层框架设计及MyBatis源码分析/04.任务四：模块作业/2021-05-30-lagou-java-01-01-04.md
+++ b/_posts/07.lagou/01.第一阶段-开源框架源码解析/01.模块一 持久层框架设计及MyBatis源码分析/04.任务四：模块作业/2021-05-30-lagou-java-01-01-04.md
@@ -1,47 +1,35 @@
 ---
 layout: post
-title:  "一些Java的面试题"
-date:   2019-01-01
-categories: InterView
-tags: InterView
+title:  "模块作业+直播答疑回放"
+date:   2021-05-30
+categories: lagou
+tags: lagou
 ---
 
 * content
 {:toc}
 
-1. 每天零碎的时间看几道面试题并且将看完的题目记录下来,考核自己
-2. 题目来源和答案:[知乎](https://zhuanlan.zhihu.com/p/64147696)
+
+1. 第一阶段、开源框架源码解析
+2. 模块一、持久层框架设计及MyBatis源码分析
+3. 任务四、模块作业+直播答疑回放
+
+# 任务4、模块作业+直播答疑回放
+
+## 作业
+### 一、简答题
+
+>1. Mybatis动态sql是做什么的？都有哪些动态sql？简述一下动态sql的执行原理？  
+>2. Mybatis是否支持延迟加载？如果支持，它的实现原理是什么？  
+>3. Mybatis都有哪些Executor执行器？它们之间的区别是什么？  
+>4. 简述下Mybatis的一级、二级缓存（分别从存储结构、范围、失效场景。三个方面来作答）？  
+>5. 简述Mybatis的插件运行原理，以及如何编写一个插件？  
+
+### 二、编程题
+请完善自定义持久层框架IPersistence，在现有代码基础上添加、修改及删除功能。【需要采用getMapper方式】
 
 
 
-
-
-
-
-
-
-
-# 面试题
-## Java基础
-1. **JDK 和 JRE 有什么区别？**
-2. **== 和 equals 的区别是什么？**
-3. **两个对象的 hashCode()相同，则 equals()也一定为 true，对吗？**
-4. **final 在 java 中有什么作用？**
-5. **java 中的 Math.round(-1.5) 等于多少？**
-6. **String 属于基础的数据类型吗？**
-7. **java 中操作字符串都有哪些类？它们之间有什么区别？**
-8. **String str="i"与 String str=new String("i")一样吗？**
-9. **如何将字符串反转？**
-10. **String 类的常用方法都有那些？**
-11. **抽象类必须要有抽象方法吗？**
-12. **普通类和抽象类有哪些区别？**
-13. **抽象类能使用 final 修饰吗？**
-14. **接口和抽象类有什么区别？**
-15. **java 中 IO 流分为几种？**
-16. **BIO、NIO、AIO 有什么区别？**
-17. **Files的常用方法都有哪些？**
-
-## 容器
 
 
 
