--- a/_posts/07.lagou/01.第一阶段-开源框架源码解析/01.模块一 持久层框架设计及MyBatis源码分析/03.任务三：MyBatis源码剖析/2021-05-25-lagou-java-01-01-03.md
+++ b/_posts/07.lagou/01.第一阶段-开源框架源码解析/01.模块一 持久层框架设计及MyBatis源码分析/03.任务三：MyBatis源码剖析/2021-05-25-lagou-java-01-01-03.md
@@ -66,12 +66,11 @@ BoundSql|表示动态生成的SQL语句以及相应的参数信息
 触发条件：API接口层传递请求过来  
 传入参数：为SQL的ID和传入参数对象  
 处理过程：  
->1.根据SQL的ID查找对应的MappedStatement对象。
->2.根据传入参数对象解析MappedStatement对象，得到最终要执行的SQL和执行传入参数。
->3.获取数据库连接，根据得到的最终SQL语句和执行传入参数到数据库执行，并得到执行结果。
->4.根据MappedStatement对象中的结果映射配置对得到的执行结果进行转换处理，并得到最终的处理
-结果。
->5.释放连接资源。
+>1.根据SQL的ID查找对应的MappedStatement对象。  
+>2.根据传入参数对象解析MappedStatement对象，得到最终要执行的SQL和执行传入参数。  
+>3.获取数据库连接，根据得到的最终SQL语句和执行传入参数到数据库执行，并得到执行结果。  
+>4.根据MappedStatement对象中的结果映射配置对得到的执行结果进行转换处理，并得到最终的处理结果。  
+>5.释放连接资源。  
 
 **4.返回处理结果**  
 将最终的处理结果返回。
